Added palette, onclicks to change pen colors

--- a/index.html
+++ b/index.html
@@ -4,88 +4,91 @@
         <link rel="stylesheet" href="main.css">
         <script src="script.js"></script>
     </head>
-    
     <body>
+        <div id="palette">
+            <div class="pen" style="backround-color:white;" onclick="setPenColor('white')"></div>
+            <div class="pen" style="background-color:black;" onclick="setPenColor('black')"></div>
+        </div>
         <div id="art">
             <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
             </div>
         <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
             </div>
         <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
             </div>
             <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
             </div>
             <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
             </div>
             <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
             </div>
             <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
             </div>
             <div class="row">
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
-                <div class="pixel"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
+                <div class="pixel" onclick="setPixelColor(this)"></div>
             </div>
         </div>
     </body>
